--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: seonho.github.io
+title: seon990.github.io
 subtitle: "seon990.github.io software engineer blog"
 email: seon99973@gmail.com
 name: SEONHO CHOI
